Fix comment in transform()

--- a/util/minhash.ipynb
+++ b/util/minhash.ipynb
@@ -1141,43 +1141,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tweet\n",
-       "002 coronavirus19 yep crazy infectious youre healthy adult itll like normal winter illness dont know around immunosuppressed friend family get sick dont go work dont come mine ta                      1\n",
-       "there’s lot merchandise come china transmit coronavirus well currency germ could also aid transmission coronavirus wash hand sanitize handle type money                                                 1\n",
-       "interest learn today apparently syncopefainting spell death involve code word hoi polloi use refer coronavirus19 cambodia absence govt acknowledgement coronavirus presence instance case past day      1\n",
-       "interest take also remember preheadline people low threshold premise accept “know thing ain’t so” example coronavirus cover story true cause recent death around world 5g radio wave seriously          1\n",
-       "interested coronavirus19 infection number portray graphic article link site current info                                                                                                                1\n",
-       "                                                                                                                                                                                                       ..\n",
-       "world face risk coronavirus pandemic important take precaution prevent asharamji bapu many time explain burn cowdung cake purifies atmosphere amp kill harmful germ let adoptvedicholipreventcorona    21\n",
-       "afghan muslim say prayer faith protect coronavirus via                                                                                                                                                 35\n",
-       "lysol clorox product kill novel coronavirus answer                                                                                                                                                     38\n",
-       "presently effect coronavirus see much many bacteria get rid celebrate holi burn cow dung condes adoptvedicholipreventcorona                                                                            39\n",
-       "prevent coronavirus use cowdung cake holika dahan amp celebrate vedic holi inspire sant shri asharamji bapu easily make herbal color home use palash turmeric etc adoptvedicholipreventcorona          96\n",
-       "Name: label, Length: 3954, dtype: int64"
-      ]
-     },
-     "execution_count": 76,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "transformed.group"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
     "unique_ids = set(item for item, _ in similars)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Number of tweets that are similar to another tweet\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "430\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(len(unique_ids))"
    ]
   },
   {
