Add comment to top of clustering NB

--- a/models/kmeans.ipynb
+++ b/models/kmeans.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "04618161-0ef7-47df-9238-8f9e7be7e171",
+   "metadata": {},
+   "source": [
+    "# This Notebook clusters tweets into three categories and compares them to their actually label (spreading misinfo, rejecting misinfo, not relevant to misinfo)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 274,
    "id": "924711fb",
